--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
+astroid==2.0.4
+atomicwrites==1.1.5
+attrs==18.1.0
 certifi==2018.8.13
 chardet==3.0.4
 colorama==0.3.9
 configparser==3.5.0
 crayons==0.1.2
 idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+more-itertools==4.3.0
+pluggy==0.7.1
+py==1.5.4
+pylint==2.1.1
+pytest==3.7.2
+pytest-repeat==0.6.0
 requests==2.19.1
+rope==0.11.0
 selenium==3.14.0
+six==1.11.0
+typed-ast==1.1.0
 urllib3==1.23
 webdriver-manager==1.7
+wrapt==1.10.11
